--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-icons": "^3.10.0",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
@@ -53,8 +54,21 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/leaflet": "^1.5.12",
+    "@types/react-dropzone": "^5.1.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-leaflet": "^2.5.1",
-    "@types/react-router-dom": "^5.1.5"
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "prettier": "^2.0.5"
   }
 }
